--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_home">主页</string>
     <string name="title_dashboard">添加账单</string>
     <string name="title_notifications">历史账单</string>
+    <string name="title_setting">设置</string>
 
     <string name="cancel">取消</string>
     <string name="title">请选择时间</string>
@@ -17,6 +18,9 @@
     <string name="current_date">当前日期</string>
     <string name="select_time">选择时间</string>
     <string name="current_time">当前时间</string>
+
+    <string name="new_version_label">发现新版本</string>
+    <string name="version_label">已是最新版本</string>
     <string name="server_ip">http://106.13.212.169</string>
     <!--<string name="server_ip">http://10.0.2.2</string>-->
 </resources>
