--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="new_version_label">发现新版本</string>
     <string name="version_label">已是最新版本</string>
     <string name="server_ip">http://106.13.212.169</string>
+    <string name="title_activity_edit">EditActivity</string>
     <!--<string name="server_ip">http://10.0.2.2</string>-->
 </resources>
